correctiing build errors

--- a/content/getnumexp.tex
+++ b/content/getnumexp.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{get_num_experiments} queries the runtime environment for the number of times a quantum kernel will be executed.
+        \FUNC{get\_num\_experiments} queries the run time environment for the number of times a quantum kernel will be executed.
 }
 
 \apireturnvalues{
