--- a/content/qalloc.tex
+++ b/content/qalloc.tex
@@ -26,7 +26,7 @@
 }      
 
 \apinotes{
-    The number of experiments can be set at compile time or at runtime using \FUNC{set_num_experiments}.
+    The number of experiments can be set at compile time or at run time using \FUNC{set\_num\_experiments}.
 }
 
 \end{apidefinition}
