--- a/content/setnumexp.tex
+++ b/content/setnumexp.tex
@@ -18,7 +18,7 @@
 \end{apiarguments}
 
 \apidescription{
-        \FUNC{set_num_experiments) takes an integer number of experiments, \VAR{e} and sets the runtime environment to execute e number of experiments for subsequent quantum kernel executions.
+        \FUNC{set\_num\_experiments} takes an integer number of experiments, \VAR{e} and sets the run time environment to execute e number of experiments for subsequent quantum kernel executions.
 }
 
 \apireturnvalues{
