--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -36,11 +36,8 @@ and the measurements from the observation of the kernel execution.\\
 % is this a mapping between a coodinate system (given a dimensionality) and indicies for the lattice sites? 
 \DATATYPENAME{SiteMap} has an integer, \VAR{site\_idx}, and string, \VAR{axis}, attribute. These attributes form a mapping of \VAR{site\_idx} to \VAR{axis} for use in \Clang.
 
-\subsection{\textbf{OperatorTransform}}\label{subsec:OperatorTransform}
-\DATATYPENAME{OperatorTransform} A function mapping an (variatic number of) input Operator(s) to a transformed output (list of) Operator(s). 
-
 \subsection{\textbf{HeterogeneousMap}}\label{subsec:HeterogeneousMap}
-\DATATYPENAME{HeterogeneousMap} has two attributes a string \VAR{s} and void pointer \VAR{p} for use in \Clang.
+\DATATYPENAME{HeterogeneousMap} allows a mapping of a string to an arbitrary type. In \Clang this type is a struct of two attributes, a string \VAR{s} and void pointer \VAR{p}. In \Cpp, this type is analogous to a map and adopts a similar syntax for creating an instance of \DATATYPENAME{HeterogeneousMap} as the \Cpp std::map, but does not require template arguments at declaration.
 
 \subsection{\textbf{qreg}}\label{subsec:qreg}
 \DATATYPENAME{qreg} is the datatype representation for qubits.
