--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -2,7 +2,7 @@ The \qcor specification has a set of datatypes that enable the expression of qua
 
 \subsection{\textbf{ObjectiveFunction}}\label{subsec:ObjectiveFunction}
 \DATATYPENAME{ObjectiveFunction} is a representation of a parameterized function y = f(U(x'),x,O)
-where x denotes a list of scalar parameters, O denotes an operator, and U(x') denotes a quantum kernel whose behaviour is controlled by x' (related to x as defined by user). \DATATYPENAME{ObjectiveFunction} is initialized with a {\em Hermitian} operater and quantum kernel. As a default the \DATATYPENAME{ObjectiveFunction} evaluates the expectation value of O with respect to U at a given x' (e.g. $<0|U(x')^\dagger \hat{O} U(x')|0>$). \DATATYPENAME{ObjectiveFunction} can be extended to provide specialized processing of the expectation values for non-VQE use cases. Using the default and extended \DATATYPENAME{ObjectiveFunction}, in tandem with the optimizer, one can succinctly implement the variational quantum algorithms, for example VQE.  
+where x denotes a list of scalar parameters, O denotes an operator, and U(x') denotes a quantum kernel whose behaviour is controlled by x' (related to x as defined by user). \DATATYPENAME{ObjectiveFunction} is initialized with a {\em Hermitian} operater and quantum kernel. As a default the \DATATYPENAME{ObjectiveFunction} evaluates the expectation value of O with respect to U at a given x' (e.g. $<0|U(x')^\dagger \hat{O} U(x')|0>$). \DATATYPENAME{ObjectiveFunction} can be extended to provide specialized processing of the expectation values for non-VQE use cases. Using the default and extended \DATATYPENAME{ObjectiveFunction}, in tandem with the optimizer, one can succinctly implement the variational quantum algorithms, for example VQE.\\  
 %default: y = a<Z>(x)+b<ZZ>(x)+... u<ZIIIIIIIZ>(x))
 %specialized: y = (log(a<Z>(x))+b<ZZ>(x)+... u<ZIIIIIIIZ>(x)))/log(p(x))... 
 
@@ -34,10 +34,10 @@ and the measurements from the observation of the kernel execution.\\
 
 \subsection{\textbf{SiteMap}}\label{subsec:Sitemap}
 % is this a mapping between a coodinate system (given a dimensionality) and indicies for the lattice sites? 
-\DATATYPENAME{SiteMap} has an integer, \VAR{site\_idx}, and string, \VAR{axis}, attribute. These attributes form a mapping of \VAR{site\_idx} to \VAR{axis} for use in \Clang.
+\DATATYPENAME{SiteMap} has an integer, \VAR{site\_idx}, and string, \VAR{axis}, attribute. These attributes form a mapping of \VAR{site\_idx} to \VAR{axis} for use in \Clang. \\
 
 \subsection{\textbf{HeterogeneousMap}}\label{subsec:HeterogeneousMap}
-\DATATYPENAME{HeterogeneousMap} allows a mapping of a string to an arbitrary type. In \Clang this type is a struct of two attributes, a string \VAR{s} and void pointer \VAR{p}. In \Cpp, this type is analogous to a map and adopts a similar syntax for creating an instance of \DATATYPENAME{HeterogeneousMap} as the \Cpp std::map, but does not require template arguments at declaration.
+\DATATYPENAME{HeterogeneousMap} allows a mapping of a string to an arbitrary type. In \Clang this type is a struct of two attributes, a string \VAR{s} and void pointer \VAR{p}. In \Cpp, this type is analogous to a map and adopts a similar syntax for creating an instance of \DATATYPENAME{HeterogeneousMap} as the \Cpp std::map, but does not require template arguments at declaration. \\
 
 \subsection{\textbf{qreg}}\label{subsec:qreg}
-\DATATYPENAME{qreg} is the datatype representation for qubits.
+\DATATYPENAME{qreg} is the datatype representation for qubits. \\
