removing mpi subsection and commenting out python subsection

--- a/content/backmatter.tex
+++ b/content/backmatter.tex
@@ -27,7 +27,7 @@
 
 \subsection*{Programs written in \Cpp}
 
-\subsection*{Programs written in \Python}
+%\subsection*{Programs written in \Python}
 
 
 \section{Running Programs}
@@ -42,9 +42,8 @@
 
 
 
-\chapter{Interoperability with other Programming Models}\label{sec:mpi}
+\chapter{Interoperability with other Programming Models}\label{sec:interop}
 
-\section{\ac{MPI} Interoperability}
 
 
 \clearpage
