Fixed latex syntax errors
in the description of qreg

--- a/content/datatypes.tex
+++ b/content/datatypes.tex
@@ -40,4 +40,4 @@ and the measurements from the observation of the kernel execution.
 \DATATYPENAME{HeterogeneousMap} allows a mapping of a string to an arbitrary type. In \Clang this type is a struct of two attributes, a string \VAR{s} and void pointer \VAR{p}. In \Cpp, this type is analogous to a map and adopts a similar syntax for creating an instance of \DATATYPENAME{HeterogeneousMap} as the \Cpp std::map, but does not require template arguments at declaration. 
 
 \subsection{\textbf{qreg}}\label{subsec:qreg}
-\DATATYPENAME{qreg} Returned from a \textt{qalloc} (a memory allocation on quantum and host devices), qreg is a datatype representing the result from the execution of a \textt{quantumKernel} allowing the user to query the results of that execution. A possible implementation could be a map-like object with key: state; value: number of counts in that state.  
+\DATATYPENAME{qreg} Returned from a \texttt{qalloc} (a memory allocation on quantum and host devices), qreg is a datatype representing the result from the execution of a \texttt{quantumKernel} allowing the user to query the results of that execution. A possible implementation could be a map-like object with key: state; value: number of counts in that state.  
