update the author list

--- a/content/coverpage.tex
+++ b/content/coverpage.tex
@@ -43,12 +43,15 @@ The Software Stack and Algorithms for Automating Quantum-Classical Computing Pro
 
 \section*{Authors and Collaborators}
 \begin{itemize}
-\item Eugene Dumestresci, \ac{ORNL}
+\item Eugene Dumitrescu, \ac{ORNL}
+\item Chung-Hsing Hsu, \ac{ORNL}
+\item Tyler Kharazi, \ac{ORNL}
 \item Pavel Lougovski, \ac{ORNL}
 \item Alexander McCaskey, \ac{ORNL}
 \item Tiffany M. Mintz, \ac{ORNL}
 \item Shirley V. Moore, \ac{ORNL}
 \item Sarah Powers, \ac{ORNL}
+\item Zak Webb, \ac{ORNL}
 \end{itemize}
 
 \date{\today}
