--- a/utils/packages.tex
+++ b/utils/packages.tex
@@ -18,6 +18,7 @@
 \usepackage{textcomp}
 \usepackage{alltt}
 \usepackage{ifpdf}
+\usepackage{minted}
 \ifpdf
 \usepackage[pdftex,
             pagebackref=true,
