--- a/main_spec.tex
+++ b/main_spec.tex
@@ -110,6 +110,8 @@
 
 \section{\qcor Examples}\label{sec:examples}
 
+\subsection{UCC Ansatz for Hubbard Dimer Model Hamiltonian}\label{subsec:hubbard_dimer_ex}
+\input{content/hubbard_dimer_ex}
 
 \clearpage
 
