adding new section for thread safety

--- a/main_spec.tex
+++ b/main_spec.tex
@@ -28,21 +28,7 @@
 \section{Datatypes}\label{subsec:datatypes}
 \input{content/datatypes}
 
-%\section{Language Bindings and Conformance}\label{subsec:bindings}
-%\input{content/language_bindings_and_conformance}
-
-%\section{Library Constants}\label{subsec:library_constants}
-%\input{content/library_constants}
-
-%\section{Environment Variables }\label{subsec:environment_variables}
-%\input{content/environment_variables}
-
-
-
-
 \clearpage
-
-
 
 \section{\qcor Library API}\label{sec:qcor_library_api}
 \subsection{\textbf{taskInitiate}}\label{subsec:taskInitiate}
@@ -112,6 +98,10 @@
 
 \subsection{UCC Ansatz for Hubbard Dimer Model Hamiltonian}\label{subsec:hubbard_dimer_ex}
 \input{content/hubbard_dimer_ex}
+
+\section{Multi-threading in \qcor}\label{sec:multi}
+\subsection{Thread Safety}
+\subsection{Examples}
 
 \clearpage
 
